web pages built, need final touches

--- a/10_lesson_starter/hours.html
+++ b/10_lesson_starter/hours.html
@@ -8,14 +8,39 @@
 </head>
 
 <body>
-    <h1>Little Taco Shop Hours</h1>
-    <nav>
-        <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="">About LTS</a></li>
-            <li><a href="/index.html#menu">Our Menu</a></li>
-            <li><a href="">Contact Us</a></li>
-        </ul>
-    </nav>
+    <header>
+        <h1>Little Taco Shop Hours</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="">About LTS</a></li>
+                <li><a href="index.html#menu">Our Menu</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+        <figure>
+            <img src="img/tacos_tray_400x267.png" alt="A picture of tacos on a tray">
+            <figcaption>A Tray of Tasty Tacos</figcaption>
+        </figure>
+    </header>
+
+    <hr>
+
+    <main>
+        <article>
+            <p>We are open 7 days a week!</p>
+            <dl>
+                <dt>Sunday-Thursday</dt>
+                <dd>11am-9pm</dd>
+                <dt>Friday-Saturday</dt>
+                <dd>11am-11pm</dd>
+            </dl>
+        </article>
+        <p><a href="#">Back to Top</a></p>
+    </main>
+    <hr>
+    <footer>
+        <p>Copyright &copy; The Little Taco Shop</p>
+    </footer>
 </body>
 </html>
