--- a/10_lesson_starter/index.html
+++ b/10_lesson_starter/index.html
@@ -8,75 +8,89 @@
 </head>
 
 <body>
-    <h1>Welcome to The Little Taco Shop</h1>
-    <nav>
-        <ul>
-            <li><a href="">About LTS</a></li>
-            <li><a href="#menu">Our Menu</a></li>
-            <li><a href="/hours.html">Store Hours</a></li>
-            <li><a href="">Contact Us</a></li>
-        </ul>
-    </nav>
-    
-    <figure>
-        <img src="img/tacos_and_drink_400x267.png" alt="A picture of Tacos and Drink">
-        <figcaption>Tacos and a Drink</figcaption>
-    </figure>
+    <header>
+        <h1>Welcome to The Little Taco Shop</h1>
+        <nav>
+            <ul>
+                <li><a href="">About LTS</a></li>
+                <li><a href="#menu">Our Menu</a></li>
+                <li><a href="hours.html">Store Hours</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+        <figure>
+            <img src="img/tacos_and_drink_400x267.png" alt="A picture of Tacos and Drink">
+            <figcaption>Tacos and a Drink</figcaption>
+        </figure>
+    </header>
     <hr>
-    <h2>About <abbr title="Little Taco Shop">LTS</abbr></h2>
-    <p><abbr title="Little Taco Shop">LTS</abbr> was founded in 2022. Our shop was built from a <strong>love of tacos</strong> 🌮🌮🌮. We hope our shop adds a unique and interesting place to our little town.</p>
-    <h3>Taco Trivia</h3>
-    <details>
-        <summary>When did tacos first appear in the United States?</summary>
-        <p>Jeffrey M. Pilcher, taco historian and professor of history at the University of Minnesota, says the earliest mention of tacos in the United States are in a newspaper from 1905.<br>(Source:
-            <a href="https://www.google.com">Smithsonian Magazine</a>)</p>
-    </details>
-    <hr>
-    <h2>Our Menu</h2>
-    <table id="menu">
-            <caption>Our Tacos</caption>
-        <tbody>
-            <tr>
-                <th>Tacos</th>
-                <th>Qty</th>
-                <th>Price</th>
-            </tr>
-            <tr>
-                <th rowspan="3">Crunchy</th>
-                <td>1</td>
-                <td>$1.50</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>$2.50</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>$3.00</td>
-            </tr>
-            <tr>
-                <th rowspan="3">Soft</th>
-                <td>1</td>
-                <td>$2.00</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>$3.50</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>$4.50</td>
-            </tr>
-            <tr>
-                <td colspan="3">Chips & Salsa $2</td>
-            </tr>
-        </tbody>
-    </table>
+
+    <main>
+        <article>
+            <h2>About <abbr title="Little Taco Shop">LTS</abbr></h2>
+            <p><abbr title="Little Taco Shop">LTS</abbr> was founded in 2022. Our shop was built from a <strong>love of tacos</strong> 🌮🌮🌮. We hope our shop adds a unique and interesting place to our little town.</p>
+            <aside>
+                <h3>Taco Trivia</h3>
+                <details>
+                    <summary>When did tacos first appear in the United States?</summary>
+                    <p>Jeffrey M. Pilcher, taco historian and professor of history at the University of Minnesota, says the earliest mention of tacos in the United States are in a newspaper from 1905.<br>(Source:
+                        <a href="https://www.google.com">Smithsonian Magazine</a>)</p>
+                </details>
+            </aside>
+        </article>
+        
+        <hr>
+        <article>
+            <h2>Our Menu</h2>
+            <table id="menu">
+                    <caption>Our Tacos</caption>
+                <tbody>
+                    <tr>
+                        <th>Tacos</th>
+                        <th>Qty</th>
+                        <th>Price</th>
+                    </tr>
+                    <tr>
+                        <th rowspan="3">Crunchy</th>
+                        <td>1</td>
+                        <td>$1.50</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>$2.50</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>$3.00</td>
+                    </tr>
+                    <tr>
+                        <th rowspan="3">Soft</th>
+                        <td>1</td>
+                        <td>$2.00</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>$3.50</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>$4.50</td>
+                    </tr>
+                    <tr>
+                        <td colspan="3">Chips & Salsa $2</td>
+                    </tr>
+                </tbody>
+            </table>
+        </article>
+    </main>
+
     <br>
+
     <footer>
         <p><a href="#">Back to Top</a></p>
         <hr>
-        <p>Copyright &#169; The Little Taco Shop</p>
+        <p>Copyright &copy; The Little Taco Shop</p>
     </footer>
+
 </body>
 </html>
