--- a/10_lesson_starter/hours.html
+++ b/10_lesson_starter/hours.html
@@ -13,13 +13,13 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="">About LTS</a></li>
+                <li><a href="index.html#about">About <abbr title="The Little Taco Shop">LTS</abbr></a></li>
                 <li><a href="index.html#menu">Our Menu</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
         <figure>
-            <img src="img/tacos_tray_400x267.png" alt="A picture of tacos on a tray">
+            <img src="img/tacos_tray_400x267.png" alt="A picture of tacos on a tray" width="400" height="267">
             <figcaption>A Tray of Tasty Tacos</figcaption>
         </figure>
     </header>
@@ -36,7 +36,9 @@
                 <dd>11am-11pm</dd>
             </dl>
         </article>
-        <p><a href="#">Back to Top</a></p>
+        <p>
+            <a href="#">Back to Top</a>
+        </p>
     </main>
     <hr>
     <footer>
